<resources>
    <string name="app_name">Tuner</string>
    <string name="percent" translatable="false">%d&#x200A;%%</string>
    <string name="hertz" translatable="false">%.0f&#x200A;Hz</string>
    <string name="hertz_1f" translatable="false">%.1f&#x200A;Hz</string>
    <string name="hertz_str" translatable="false">%s&#x200A;Hz</string>
    <string name="seconds" translatable="false">%.2f&#x200A;s</string>
    <string name="windowing_function">Windowing function</string>
    <string name="window_hamming">Hamming window</string>
    <string name="window_hann">Hann window</string>
    <string name="no_window">No windowing function</string>
    <string name="appearance">Appearance</string>
    <string name="dark_appearance">Dark appearance</string>
    <string name="light_appearance">Light appearance</string>
    <string name="system_appearance">Appearance follows system settings</string>
    <string name="dark_appearance_short">Dark</string>
    <string name="light_appearance_short">Light</string>
    <string name="system_appearance_short">Auto</string>
    <string name="settings">Settings</string>
    <string name="overlap">Window overlap</string>
    <string name="window_size">Window size</string>
    <string name="minimum_frequency">"Minimum frequency: "</string>
    <string name="pitch_history_duration">Duration of pitch history</string>
    <string name="pitch_history_num_faulty_values">Jump to new pitch</string>
    <plurals name="pitch_history_num_faulty_values_summary">
        <item quantity="one">Directly jump to new pitch result</item>
        <item quantity="other">After %d similar pitch results</item>
    </plurals>
    <string name="num_moving_average">Moving average</string>
    <plurals name="num_moving_average_summary">
        <item quantity="one">No averaging</item>
        <item quantity="other">Average over %d pitch results</item>
    </plurals>
    <string name="about">About</string>
    <string name="about_message">Tuner app\nVersion: %s\nLicense: GPLv3\nhttps://github.com/thetwom/Tuner</string>
    <string name="reset_all_settings">Reset all settings</string>
    <string name="reset_settings_prompt">Do you really want to reset all settings?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="autocorrelation">autocorrelation</string>
    <string name="pitch_history">pitch history</string>
    <string name="spectrum">spectrum</string>
    <string name="cent" translatable="false">%+d&#x200A;&#162;</string>
    <string name="cent_nosign" translatable="false">%d&#x200A;&#162;</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="display_on_lock_screen">Display on lock screen</string>
    <string name="samples">samples</string>
    <string name="scientific_mode">Scientific mode</string>
    <string name="tolerance_in_cents">Tolerance</string>
    <string name="tolerance_summary" translatable="false">&#177;%d&#x200A;&#162;</string>
    <string name="expert">Expert</string>
    <string name="basic">Basic</string>
    <string name="others">Others</string>
    <string name="chromatic">Chromatic</string>
    <string name="guitar_eadgbe">6-string guitar</string>
    <string name="bass_eadg">4-string bass</string>
    <string name="bass_beadg">5-string bass</string>
    <string name="ukulele_gcea">Ukulele</string>
    <string name="c_note_name">C</string>
    <string name="d_note_name">D</string>
    <string name="e_note_name">E</string>
    <string name="f_note_name">F</string>
    <string name="g_note_name">G</string>
    <string name="a_note_name">A</string>
    <string name="b_note_name">B</string>
    <string name="bflat_note_name">-</string>
    <string name="c_solfege">Do</string>
    <string name="d_solfege">Re</string>
    <string name="e_solfege">Mi</string>
    <string name="f_solfege">Fa</string>
    <string name="g_solfege">Sol</string>
    <string name="a_solfege">La</string>
    <string name="b_solfege">Si</string>
    <string name="c_note_international" translatable="false">C</string>
    <string name="d_note_international" translatable="false">D</string>
    <string name="e_note_international" translatable="false">E</string>
    <string name="f_note_international" translatable="false">F</string>
    <string name="g_note_international" translatable="false">G</string>
    <string name="a_note_international" translatable="false">A</string>
    <string name="b_note_international" translatable="false">B</string>
    <string name="notation">Notation</string>
    <string name="notation_standard">Default (A-B-C-…)</string>
    <string name="notation_solfege">Solfège</string>
    <string name="notation_international">International (A-B-C-…)</string>
    <string name="violin_gdae">Violin</string>
    <string name="abort">Abort</string>
    <string name="instrument_name">Instrument name</string>
    <string name="add_note">Add note</string>
    <string name="delete_note">Delete note</string>
    <string name="lately_detected_notes">Lately detected tones</string>
    <string name="done">Done</string>
    <string name="edit_instrument">Edit instrument</string>
    <string name="predefined_items">Default</string>
    <string name="custom_item">Custom</string>
    <string name="file_empty">File is empty: %s</string>
    <string name="file_invalid">File is invalid: %s</string>
    <plurals name="items_deleted">
        <item quantity="one">%d item deleted</item>
        <item quantity="other">%d items deleted</item>
    </plurals>
    <string name="undo">Undo</string>
    <string name="pick_icon">Pick icon</string>
    <string name="copy_extension">%s (copy)</string>
    <string name="failed_to_archive_items">Failed to write items to file</string>
    <plurals name="database_num_saved">
        <item quantity="one">Writing %d item to \"%s\".</item>
        <item quantity="other">Writing %d items to \"%s\".</item>
    </plurals>
    <string name="database_empty">There are no items which can be saved.</string>
    <plurals name="load_instruments">
        <item quantity="one">Loading %d instrument</item>
        <item quantity="other">Loading %d instruments</item>
    </plurals>
    <plurals name="load_temperaments">
        <item quantity="one">Loading %d temperament</item>
        <item quantity="other">Loading %d temperaments</item>
    </plurals>
    <string name="replace_current_list">Replace current list</string>
    <string name="prepend_current_list">Prepend to current list</string>
    <string name="append_current_list">Append to current list</string>
    <string name="share">Share items</string>
    <plurals name="sharing_num_items">
        <item quantity="one">Sharing %d items</item>
        <item quantity="other">Sharing %d items</item>
    </plurals>
    <string name="load_from_disk">Load items from file</string>
    <string name="save_to_disk">Save items to file</string>
    <string name="prefer_flat">Prefer \u266D over \u266F</string>
    <string name="viola_cgda">Viola</string>
    <string name="cello_cgda">Cello</string>
    <string name="double_bass_eadg">Double bass</string>
    <string name="equal_temperament_12" translatable="false">Equal temperament</string>
    <string name="equal_temperament_12_desc" translatable="false">12 notes per octave</string>
    <string name="equal_temperament_12_abbr" translatable="false">EDO 12</string>
    <string name="equal_temperament_x">Equal temperament %d</string>
    <string name="equal_temperament_x_desc">%d notes per octave</string>
    <string name="equal_temperament_x_abbr">EDO %d</string>
    <string name="pythagorean_tuning">Pythagorean tuning</string>
    <string name="pythagorean_tuning_abbr">Pythagorean</string>
    <string name="pure_tuning">Just tuning</string>
    <string name="pure_tuning_desc">5-limit, asymmetric scale</string>
    <string name="pure_tuning_abbr">Just</string>
    <string name="quarter_comma_mean_tone">¼ comma meantone</string>
    <string name="quarter_comma_mean_tone_desc">Pure major 3rds</string>
    <string name="quarter_comma_mean_tone_abbr">¼ comma meantone</string>
    <string name="third_comma_mean_tone">⅓ comma meantone</string>
    <string name="third_comma_mean_tone_desc">Pure minor 3rds</string>
    <string name="third_comma_mean_tone_abbr">⅓ comma meantone</string>
    <string name="fifth_comma_mean_tone">⅕ comma meantone</string>
    <string name="fifth_comma_mean_tone_desc">Pure diatonic semitones</string>
    <string name="fifth_comma_mean_tone_abbr">⅕ comma meantone</string>
    <string name="werckmeister_iii">Werckmeister III</string>
    <string name="werckmeister_iii_desc">¼ comma divisions</string>
    <string name="werckmeister_iii_abbr">Werckmeister III</string>
    <string name="werckmeister_iv">Werckmeister IV</string>
    <string name="werckmeister_iv_desc">⅓ comma divisions</string>
    <string name="werckmeister_iv_abbr">Werckmeister IV</string>
    <string name="werckmeister_v">Werckmeister V</string>
    <string name="werckmeister_v_desc">Other ¼ comma divisions</string>
    <string name="werckmeister_v_abbr">Werckmeister V</string>
    <string name="werckmeister_vi">Werckmeister VI</string>
    <string name="werckmeister_vi_desc">Septenarius</string>
    <string name="werckmeister_vi_abbr">Werckmeister VI</string>
    <string name="kirnberger1">Kirnberger I</string>
    <string name="kirnberger1_desc">One syntonic comma</string>
    <string name="kirnberger1_abbr">Kirnberger I</string>
    <string name="kirnberger2">Kirnberger II</string>
    <string name="kirnberger2_desc">½ syntonic comma divisions</string>
    <string name="kirnberger2_abbr">Kirnberger II</string>
    <string name="kirnberger3">Kirnberger III</string>
    <string name="kirnberger3_desc">¼ syntonic comma divisions</string>
    <string name="kirnberger3_abbr">Kirnberger III</string>
    <string name="neidhardt1">Neidhardt 1</string>
    <string name="neidhardt1_desc">For a village, 1732</string>
    <string name="neidhardt1_abbr">Neidhardt 1</string>
    <string name="neidhardt2">Neidhardt 2</string>
    <string name="neidhardt2_desc">For a small town, 1732</string>
    <string name="neidhardt2_abbr">Neidhardt 2</string>
    <string name="neidhardt3">Neidhardt 3</string>
    <string name="neidhardt3_desc">For a big city, 1732</string>
    <string name="neidhardt3_abbr">Neidhardt 3</string>
    <string name="valotti">Valotti</string>
    <string name="valotti_abbr">Valotti</string>
    <string name="young2">Young 2</string>
    <string name="young2_abbr">Young 2</string>
    <string name="reference_frequency">Reference frequency</string>
    <string name="frequency">Frequency</string>
    <string name="temperament">Temperament</string>
    <string name="root_note">Key note</string>
    <string name="test_tuning">Test tuning</string>
    <string name="details">Details</string>
    <string name="pythagorean_comma">%d\u2044%d&#x200A;pC</string>
    <string name="syntonic_comma">%d\u2044%d&#x200A;sC</string>
    <string name="schisma">%d\u2044%d&#x200A;sch</string>
    <string name="plus_correction" translatable="false">" + "</string>
    <string name="minus_correction" translatable="false">" - "</string>
    <string name="pythagorean_comma_desc">pC: Pythagorean Comma, 531441\u2044524288\nsC: Syntonic Comma, 81\u204480\nsch: Schisma, 32805\u204432768</string>
    <string name="circle_of_fifths">Circle of fifths</string>
    <string name="set_default">Reset to default</string>
    <string name="acknowledged">Acknowledged</string>
    <string name="black_night_mode">Black background in dark mode</string>
    <string name="system_color_accents">Color accents from system</string>
    <string name="incorrect_temperament">Incompatible temperament!</string>
    <string name="ok">OK</string>
    <string name="notation_carnatic">Carnatic</string>
    <string name="notation_hindustani">Hindustani</string>
    <string name="helmholtz_notation">Helmholtz notation (C, … c\')</string>
</resources>