<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        app:key="appearance"
        app:title="@string/appearance"
        android:entries="@array/appearanceNames"
        android:entryValues="@array/appearanceList"
        android:dialogTitle="@string/appearance"
        android:defaultValue="auto"
        android:summary="@string/system_appearance"
        />

    <EditTextPreference
        app:key="a4_frequency"
        app:title="@string/a4_frequency"
        android:defaultValue="440"
        android:summary="440 Hz"
        />


    <ListPreference
        android:key="windowing"
        app:title="@string/windowing_function"
        android:entries="@array/windowingFunctionNames"
        android:entryValues="@array/windowingFunctionList"
        android:defaultValue="no_window"
        android:summary="@string/no_window"
        />

    <SeekBarPreference
        android:key="window_size"
        android:title="@string/window_size"
        app:defaultValue="5"
        app:min="0"
        android:max="8"
        app:seekBarIncrement="1"
        app:updatesContinuously="true"
        />
    <SeekBarPreference
        android:key="overlap"
        app:title="@string/overlap"
        app:defaultValue="25"
        app:min="0"
        android:max="80"
        app:seekBarIncrement="1"
        app:updatesContinuously="true"
        />

</PreferenceScreen>
