<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RadioGroup
        android:id="@+id/notation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent">
        <RadioButton
            android:id="@+id/standard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/notation_standard"/>
        <RadioButton
            android:id="@+id/solfege"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/notation_solfege"/>
        <RadioButton
            android:id="@+id/international"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/notation_international"/>
        <RadioButton
            android:id="@+id/carnatic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/notation_carnatic"/>
        <RadioButton
            android:id="@+id/hindustani"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/notation_hindustani"/>
    </RadioGroup>

    <View
        android:id="@+id/separator"
        app:layout_constraintTop_toBottomOf="@id/notation"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="?attr/colorSurfaceVariant"
        />

    <CheckBox
        android:id="@+id/helmholtz_notation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/separator"
        android:layout_margin="16dp"
        android:text="@string/helmholtz_notation"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>