<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

      <item
        android:id="@+id/action_share"
        android:orderInCategory="98"
        android:title="@string/share"
        android:icon="@drawable/ic_share"
        app:showAsAction="ifRoom"
        />


    <item
        android:id="@+id/action_archive"
        android:orderInCategory="96"
        android:title="@string/save_to_disk"
        android:icon="@drawable/ic_archive"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_unarchive"
        android:orderInCategory="97"
        android:title="@string/load_from_disk"
        android:icon="@drawable/ic_unarchive"
        app:showAsAction="ifRoom"
        />


</menu>