<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RadioGroup
        android:id="@+id/appearance_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent">
        <RadioButton
            android:id="@+id/auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/system_appearance_short"/>
        <RadioButton
            android:id="@+id/light"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/light_appearance_short"/>
        <RadioButton
            android:id="@+id/dark"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dark_appearance_short"/>
    </RadioGroup>

    <View
        android:id="@+id/separator"
        app:layout_constraintTop_toBottomOf="@id/appearance_mode"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="?attr/colorSurfaceVariant"
        />

    <CheckBox
        android:id="@+id/black_night_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/separator"
        android:layout_margin="16dp"
        android:text="@string/black_night_mode"
        />
    <CheckBox
        android:id="@+id/system_color_accents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/black_night_mode"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/system_color_accents"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>