<?xml version="1.0" encoding="utf-8"?>
<!--
  - Copyright 2020 Michael Moessner
  -
  - This file is part of Tuner.
  -
  - Tuner is free software: you can redistribute it and/or modify
  - it under the terms of the GNU General Public License as published by
  - the Free Software Foundation, either version 3 of the License, or
  - (at your option) any later version.
  -
  - Tuner is distributed in the hope that it will be useful,
  - but WITHOUT ANY WARRANTY; without even the implied warranty of
  - MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  - GNU General Public License for more details.
  -
  - You should have received a copy of the GNU General Public License
  - along with Tuner.  If not, see <http://www.gnu.org/licenses/>.
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

     <de.moekadu.tuner.PlotView
        android:id="@+id/spectrum_plot"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/correlation_plot"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="0.2"
        app:markColor="?attr/colorSecondary"
        app:markLabelColor="?attr/colorOnSecondary"
        app:plotLineWidth="2dp"
        app:tickLineWidth="0.5dp"
        app:tickTextSize="9dp"
        app:title="@string/spectrum"
        app:yTickLabelWidth="30sp" />

    <de.moekadu.tuner.PlotView
        android:id="@+id/correlation_plot"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/pitch_plot"
        app:layout_constraintTop_toBottomOf="@+id/spectrum_plot"
        app:layout_constraintVertical_weight="0.2"
        app:markColor="?attr/colorSecondary"
        app:markLabelColor="?attr/colorOnSecondary"
        app:plotLineWidth="2dp"
        app:tickLineWidth="0.5dp"
        app:tickTextSize="9dp"
        app:title="@string/autocorrelation"
        app:yTickLabelWidth="30sp" />

    <de.moekadu.tuner.PlotView
        android:id="@+id/pitch_plot"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correlation_plot"
        app:layout_constraintVertical_weight="0.6"
        app:markColor="?attr/colorSecondary"
        app:markLabelColor="?attr/colorOnSecondary"
        app:markLineWidth="2dp"
        app:markColor2="@color/colorPrimary"
        app:markLabelColor2="@color/colorOnPrimary"
        app:plotLineWidth="2dp"
        app:plotLineColorInactive="?attr/colorPrimaryFaint"
        app:pointColor="?attr/colorSecondary"
        app:pointColorInactive="?attr/colorPrimaryFaint"
        app:markTextSize2="9dp"
        app:tickLineWidth="0.5dp"
        app:tickTextSize="9dp"
        app:title="@string/pitch_history"
        app:yTickLabelWidth="30sp" />

    <!--    <de.moekadu.tuner.VolumeMeter-->
    <!--        android:id="@+id/volume_meter"-->
    <!--        android:layout_width="30dp"-->
    <!--        android:layout_height="match_parent"-->
    <!--        app:layout_constraintRight_toRightOf="parent"-->
    <!--        android:padding="12dp"-->
    <!--        app:min="-3"-->
    <!--        app:max="1"-->
    <!--        />-->

</androidx.constraintlayout.widget.ConstraintLayout>