<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:clickable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/instrument_title"
        android:hint="@string/instrument_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:boxStrokeColor="@color/text_field_outline_color"
        app:helperTextTextColor="?attr/colorOnSurface"
        app:counterTextColor="?attr/colorOnSurface"
        app:hintTextColor="?attr/colorOnSurface"
        android:background="@null"
        app:startIconDrawable="@drawable/ic_guitar"
        app:startIconTint="?attr/colorOnSurface"
        app:endIconContentDescription="@string/clear_instrument_name"
        app:endIconMode="clear_text"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:nextFocusDown="@id/root"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/instrument_title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:maxLines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <de.moekadu.tuner.views.StringView
        android:id="@+id/string_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/instrument_title"
        app:layout_constraintBottom_toTopOf="@id/button_add_note"
        android:layout_marginRight="12dp"
        android:paddingTop="0dp"
        android:paddingBottom="3dp"
        android:paddingRight="37sp"
        android:paddingLeft="12dp"
        app:frameColor="?attr/colorOnSurface"
        app:frameColorOnTouch="?attr/colorPrimary"
        app:stringColor="?attr/colorOnSurface"
        app:labelTextColor="?attr/colorSurface"
        app:stringColor2="?attr/colorPrimary"
        app:labelTextColor2="?attr/colorOnPrimary"
        app:labelTextSize="20sp"
        app:labelTextSize2="20sp"
        app:labelPadding="2dp"
        app:labelSpacing="4dp"
        app:stringLineWidth="1dp"
        app:stringLineWidth2="2dp"
        app:anchorDrawableWidth="50sp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_add_note"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/note_selector"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_delete_note"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="3dp"
        app:cornerRadius="3dp"
        app:strokeColor="?attr/colorOnSurface"
        android:textColor="?attr/colorOnSurface"
        android:text="@string/add_note"
        style="@style/Widget.Material3.Button.OutlinedButton"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_delete_note"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/button_add_note"
        app:layout_constraintBottom_toBottomOf="@+id/button_add_note"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/button_add_note"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="12dp"
        app:cornerRadius="3dp"
        app:strokeColor="?attr/colorOnSurface"
        android:textColor="?attr/colorOnSurface"
        android:text="@string/delete_note"
        style="@style/Widget.Material3.Button.OutlinedButton"
        />

    <de.moekadu.tuner.views.NoteSelector
        android:id="@+id/note_selector"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@id/detected_note_viewer"
        app:textPadding="2dp"
        app:labelTextColor="?attr/colorOnSurface"
        app:labelTextColor2="?attr/colorOnSurfaceVariant"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:layout_marginBottom="8dp"
        app:textStyle="bold"
        app:rectangleRadius="3dp"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:focusable="true"
        />

    <de.moekadu.tuner.views.DetectedNoteViewer
        android:id="@+id/detected_note_viewer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:minimumLabelSpace="5dp"
        app:labelTextColor="?attr/colorOnSurface"
        app:title="@string/lately_detected_notes"
        app:titleSize="12sp"
        android:layout_marginBottom="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:boxStrokeColor="?attr/colorOnSurface"
        app:boxStrokeOpacity="1"
        app:titleColor="?attr/colorOnSurface"
        app:titleOpacity="1"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:focusable="true"
        />

</androidx.constraintlayout.widget.ConstraintLayout>